--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,7 @@ en:
       almost_x_years:
         one:   "1 year" # default was: "almost 1 year"
         other: "%{count} years" # default was: "almost %{count} years"
+  server:
+    destroy:
+      success: "Server successfully destroyed."
+      failure: "Error attempting to destroy server."
