Redirect to JobsController#index if an invalid job id is passed in

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,3 +49,6 @@ en:
     resume:
       success: "Server successfully resumed."
       failure: "Error attempting to resume server."
+  job:
+    find:
+      :failure: "Could not find job with id: %{id}!"
