Add #update_all to ServersController for state changes.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,9 @@ en:
     resume:
       success: "Server successfully resumed."
       failure: "Error attempting to resume server."
+    update_all:
+      success: "Servers have been %{server_action}."
+      invalid: "Action not allowed."
   job:
     find:
       :failure: "Could not find job with id: %{id}!"
