--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,21 +36,21 @@ en:
       almost_x_years:
         one:   "1 year" # default was: "almost 1 year"
         other: "%{count} years" # default was: "almost %{count} years"
-  server:
+  worker:
     stop:
-      success: "Server successfully stopped."
-      failure: "Error attempting to stop server."
+      success: "Worker successfully stopped."
+      failure: "Error attempting to stop worker."
     destroy:
-      success: "Server successfully destroyed."
-      failure: "Error attempting to destroy server."
+      success: "Worker successfully destroyed."
+      failure: "Error attempting to destroy worker."
     pause:
-      success: "Server successfully paused."
-      failure: "Error attempting to pause server."
+      success: "Worker successfully paused."
+      failure: "Error attempting to pause worker."
     resume:
-      success: "Server successfully resumed."
-      failure: "Error attempting to resume server."
+      success: "Worker successfully resumed."
+      failure: "Error attempting to resume worker."
     update_all:
-      success: "Servers have been %{server_action}."
+      success: "Workers have been %{worker_action}."
       invalid: "Action not allowed."
   job:
     find:
