added flash messages (success/failure) for the controller actions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,3 +55,19 @@ en:
   job:
     find:
       :failure: "Could not find job with id: %{id}!"
+  dirmon_entry:
+      create:
+        success: "Dirmon successfully created."
+        failure: "Error attempting to create."
+      destroy:
+        success: "Dirmon successfully destroyed."
+        failure: "Error attempting to destroy Dirmon."
+      enable:
+        success: "Dirmon successfully enabled."
+        failure: "Error attempting to enable Dirmon."
+      disable:
+        success: "Dirmon successfully disabled."
+        failure: "Error attempting to disable Dirmon."
+      update:
+        success: "Dirmon has been updated."
+        invalid: "Error attempting to update Dirmon."
