Prompt user for confirmation when performing state changes.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,3 +55,5 @@ en:
   job:
     find:
       :failure: "Could not find job with id: %{id}!"
+    action:
+      confirm: "Are you sure you want to %{action} this job?"
