--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
       almost_x_years:
         one:   "1 year" # default was: "almost 1 year"
         other: "%{count} years" # default was: "almost %{count} years"
-  worker:
+  server:
     stop:
       success: "Server successfully stopped."
       failure: "Error attempting to stop server."
@@ -50,7 +50,7 @@ en:
       success: "Server successfully resumed."
       failure: "Error attempting to resume server."
     update_all:
-      success: "Servers have been %{worker_action}."
+      success: "Servers have been %{server_action}."
       invalid: "Action not allowed."
       confirm: "Are you sure you want to %{action} servers?"
   job:
