--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,20 +37,18 @@ en:
         one:   "1 year" # default was: "almost 1 year"
         other: "%{count} years" # default was: "almost %{count} years"
   server:
+    find:
+      failure: "Could not find server with id: %{id}!"
     stop:
-      success: "Server successfully stopped."
       failure: "Error attempting to stop server."
     destroy:
-      success: "Server successfully destroyed."
+      success: "Server successfully destroyed. All jobs running on this server have been re-queued for processing on other servers."
       failure: "Error attempting to destroy server."
     pause:
-      success: "Server successfully paused."
       failure: "Error attempting to pause server."
     resume:
-      success: "Server successfully resumed."
       failure: "Error attempting to resume server."
     update_all:
-      success: "Servers have been %{server_action}."
       invalid: "Action not allowed."
       confirm: "Are you sure you want to %{action} servers?"
   job:
@@ -65,17 +63,12 @@ en:
     find:
       failure: "Could not find entry with id: %{id}!"
     create:
-      success: "Dirmon successfully created."
       failure: "Error attempting to create."
     destroy:
-      success: "Dirmon successfully destroyed."
       failure: "Error attempting to destroy Dirmon."
     enable:
-      success: "Dirmon successfully enabled."
       failure: "Error attempting to enable Dirmon."
     disable:
-      success: "Dirmon successfully disabled."
       failure: "Error attempting to disable Dirmon."
     update:
-      success: "Dirmon has been updated."
       invalid: "Error attempting to update Dirmon."
