--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,7 +50,7 @@ en:
       failure: "Error attempting to resume server."
     update_all:
       invalid: "Action not allowed."
-      confirm: "Are you sure you want to %{action} servers?"
+      confirm: "Are you sure you want to %{action} ALL Rocket Job servers?"
   job:
     find:
       failure: "Could not find job with id: %{id}!"
